src/snapshots/typst_geshihua__tests__convert_func_call-2.snap
---
source: src/lib.rs
expression: doc.pretty(120).to_string()
---
"#link(\"http://example.com\")[ test ]"
