src/snapshots/typst_geshihua__tests__to_doc-2.snap
---
source: src/lib.rs
expression: to_doc(test.into())
---
[
    "123",
    Hardline,
    "456",
    Hardline,
    "789",
]
