src/snapshots/typst_geshihua__tests__to_doc-3.snap
---
source: src/lib.rs
expression: to_doc(test.into())
---
[
    "123",
    Hardline,
    "4567",
    Hardline,
    "789",
]
