src/snapshots/typst_geshihua__tests__to_doc-4.snap
---
source: src/lib.rs
expression: to_doc(test.into())
---
[
    "123",
    Hardline,
    "4568",
    Hardline,
    "789",
]
