src/snapshots/typst_geshihua__tests__to_doc.snap
---
source: src/lib.rs
expression: to_doc(test.into())
---
"command can take a directory as an argument to use as the book"
